--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "publish-s3"]
 	path = plugins/publish-s3
 	url = git@github.com:motherjones/plugin-publish-s3.git
+[submodule "plugins/theme-mojo"]
+	path = plugins/theme-mojo
+	url = git@github.com:motherjones/datawrapper-theme-mojo.git 
